# CANSAT

./: .gitmodules  CMakeLists.txt  platformio.ini
src/: main.cpp
src/EspHal/: EspHal.h
src/dps310/: CMakeLists.txt  dps310.c  dps310.h
src/gps_speed/: 2d_velocity.c  2d_velocity.h
src/lsm9ds1/: lsm9ds1_hal.c  lsm9ds1_hal.h
src/neo6m/: CMakeLists.txt  neo6m.c  neo6m.h
src/tmp117/: tmp117.c  tmp117.h
